[tool.poetry]
name = "lisa"
version = "0.0.1"
description = "Logging information and system analysis"
authors = ["Angus <angus.goody@ons.gov.uk>"]
readme = "README.md"
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
apscheduler = "^3.11.0"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
